strapi/kubernetes/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${BUILD_REPOSITORY_NAME}-app
  namespace: ${NAMESPACE}
  labels:
    service: app
  annotations:
    repositoryUrl: ${BUILD_REPOSITORY_URI}
    commit: ${COMMIT}
    tag: ${TAG}
    image: ${IMAGE}
spec:
  selector:
    matchLabels:
      service: app
  template:
    metadata:
      labels:
        service: app
    spec:
      containers:
        - image: ${IMAGE_TAG}
          name: app
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 900m
              memory: 8Gi
            requests:
              cpu: ${STRAPI_CPU_REQUESTS}
              memory: ${STRAPI_MEMORY_REQUESTS}
          readinessProbe:
            httpGet:
              path: /admin
              port: ${INTERNAL_APP_PORT}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: ${IMAGE_PULL_SECRET}
