strapi/kubernetes/base/stateful-set-meilisearch.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ${BUILD_REPOSITORY_NAME}-meilisearch
  namespace: ${NAMESPACE}
  labels:
    service: meilisearch
spec:
  selector:
    matchLabels:
      app: meilisearch
  replicas: 1
  serviceName: ${BUILD_REPOSITORY_NAME}-meilisearch
  template:
    metadata:
      labels:
        service: meilisearch
    spec:
      containers:
        - name: meilisearch
          image: "getmeili/meilisearch:v0.29.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7700
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 60
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 60
            initialDelaySeconds: 30
          volumeMounts:
            - name: ${BUILD_REPOSITORY_NAME}-meilisearch-data-storage
              mountPath: /meili_data
          resources: {}
  volumeClaimTemplates:
    - metadata:
        name: ${BUILD_REPOSITORY_NAME}-meilisearch-data-storage
        labels:
          service: meilisearch
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
